# LitterallyLess

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yuv2rgb-jni.cc  yuv2rgb.cc  yuv2rgb.h
app/src/main/java/software/enginer/litterallyless/: CostProximityResult.java  LitterallyLess.java  MainActivity.java  MapFragment.java  MapViewModel.java
app/src/main/java/software/enginer/litterallyless/common/: RenderscriptYuv2Rgb.kt
app/src/main/java/software/enginer/litterallyless/data/: ARDetectorRepository.java  AnchorProximityResult.java  ChangeFunction.java  DefaultTransitionSpec.java  DetectionListener.java  DetectionReading.java  DetectionResult.java  DetectorRepository.java  MapRepository.java  MapStyle.java  PaintedString.java  Trackable.java  TrackableAnchorManager.java  TransitionSpec.java  TrashModel.java
app/src/main/java/software/enginer/litterallyless/logic/: Detector.java  (+3 more)
app/src/main/res/drawable/: recenter_24dp.xml
app/src/main/res/layout/: activity_main.xml  fragment_ar_core.xml  fragment_camera_feed.xml  fragment_detection.xml  fragment_firebase.xml  fragment_home.xml  fragment_leaderboard.xml  fragment_map.xml  google_signin.xml  leaderboard_item.xml
app/src/main/res/menu/: nav_bar.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  theme_overlays.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/main/rs/: yuv2rgb.rs
dependencylibs/: create.sh
gradle/: libs.versions.toml
(+137 files in other folders)
